added darkmode functionality

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,6 +65,7 @@ body{
         margin-bottom: 2rem;
         h2{
             margin: 1rem;
+            font-variation-settings: "wght" 30, "stbl" 70;//WAAROM WERKT DIT NIET??
         }
         div{
             cursor: pointer;
