--- a/scss/style.scss
+++ b/scss/style.scss
@@ -118,6 +118,7 @@ body{
                 border-radius: $radius;
                 box-shadow: 0px 0px 20px darken($light-mode-el, $amount: 15);
                 margin-bottom: 2rem;
+                cursor: pointer;
                 img{
                     width: 100%;
                 }
