--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,11 +74,11 @@ body{
             justify-content: center;
             align-items: center;
             p{
-                margin: 1rem;
+                margin: 1rem 1rem 1rem 0;
                 padding-top: 6px;
             }
             span{
-                margin-right: .5rem;
+                margin: .5rem .5rem 0 0;
             }
         }
     }
