--- a/scss/style.scss
+++ b/scss/style.scss
@@ -227,6 +227,9 @@ body{
         ul{
             list-style: none;
             padding: 0;
+            li{
+                color: $light-mode-text;
+            }
         }
     }
 }
@@ -268,6 +271,7 @@ body{
      .wrapper main .extra{
        width: auto;
        max-width: 900px;
+       margin: 0 2rem;
         .details{
             flex-flow: nowrap row;
             justify-content: space-between;
